--- a/jive-chatbot-widget/examples/index.html
+++ b/jive-chatbot-widget/examples/index.html
@@ -91,6 +91,47 @@
       border-radius: 4px;
       margin-top: 20px;
     }
+
+    .upload-status {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #666;
+    }
+
+    .upload-status .file-item {
+      display: flex;
+      align-items: center;
+      margin: 5px 0;
+      padding: 5px;
+      background: #f5f5f5;
+      border-radius: 4px;
+    }
+
+    .upload-status .file-item .file-name {
+      flex: 1;
+      margin-right: 10px;
+    }
+
+    .upload-status .file-item .file-status {
+      font-size: 12px;
+      padding: 2px 6px;
+      border-radius: 3px;
+    }
+
+    .upload-status .file-item .status-success {
+      background: #e6f4ea;
+      color: #137333;
+    }
+
+    .upload-status .file-item .status-error {
+      background: #fce8e6;
+      color: #c5221f;
+    }
+
+    .upload-status .file-item .status-duplicate {
+      background: #fff3e0;
+      color: #e65100;
+    }
   </style>
   <!-- Add Socket.IO client -->
   <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
@@ -139,6 +180,12 @@
         <div class="control-group">
           <label for="socket-endpoint">WebSocket Endpoint</label>
           <input type="text" id="socket-endpoint" value="http://localhost:3000">
+        </div>
+
+        <div class="control-group">
+          <label for="file-upload">Upload Documents</label>
+          <input type="file" id="file-upload" multiple accept=".pdf,.txt,.md">
+          <div id="upload-status" class="upload-status"></div>
         </div>
       </div>
 
@@ -378,6 +425,48 @@
           chatbot.setAttribute('socket-endpoint', endpoint);
           testChatbotButton.textContent = 'Disconnect Chatbot WebSocket';
           logEvent('Chatbot WebSocket connection requested');
+        }
+      });
+
+      // Add file upload handling
+      document.getElementById('file-upload').addEventListener('change', async (event) => {
+        const files = event.target.files;
+        const statusDiv = document.getElementById('upload-status');
+        statusDiv.innerHTML = '';
+
+        for (const file of files) {
+          const fileItem = document.createElement('div');
+          fileItem.className = 'file-item';
+          fileItem.innerHTML = `
+            <span class="file-name">${file.name}</span>
+            <span class="file-status">Uploading...</span>
+          `;
+          statusDiv.appendChild(fileItem);
+
+          const formData = new FormData();
+          formData.append('file', file);
+
+          try {
+            const response = await fetch('http://localhost:3000/api/pdf/upload', {
+              method: 'POST',
+              body: formData
+            });
+
+            const result = await response.json();
+            
+            if (response.ok) {
+              fileItem.querySelector('.file-status').textContent = 'Uploaded successfully';
+              fileItem.querySelector('.file-status').classList.add('status-success');
+            } else if (response.status === 409) {
+              fileItem.querySelector('.file-status').textContent = 'Duplicate file - skipped';
+              fileItem.querySelector('.file-status').classList.add('status-duplicate');
+            } else {
+              throw new Error(result.error || 'Upload failed');
+            }
+          } catch (error) {
+            fileItem.querySelector('.file-status').textContent = `Error: ${error.message}`;
+            fileItem.querySelector('.file-status').classList.add('status-error');
+          }
         }
       });
     });
