--- a/jive-chatbot-widget/examples/index.html
+++ b/jive-chatbot-widget/examples/index.html
@@ -444,7 +444,7 @@
           statusDiv.appendChild(fileItem);
 
           const formData = new FormData();
-          formData.append('file', file);
+          formData.append('pdf', file);
 
           try {
             const response = await fetch('http://localhost:3000/api/pdf/upload', {
