--- a/jive-chatbot-widget/examples/index.html
+++ b/jive-chatbot-widget/examples/index.html
@@ -343,9 +343,26 @@
       font-size: 0.9em;
       color: #666;
     }
+
+    .export-button {
+      background-color: #4a90e2;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+      margin-left: auto;
+    }
+
+    .export-button:hover {
+      background-color: #3a80d2;
+    }
   </style>
   <!-- Add Socket.IO client -->
   <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
+  <!-- Add marked library for markdown parsing -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <!-- Add the widget script -->
   <script src="../dist/jive-chatbot.umd.js"></script>
 </head>
@@ -394,8 +411,8 @@
         </div>
 
         <div class="control-group">
-          <label for="file-upload">Upload Documents</label>
-          <input type="file" id="file-upload" multiple accept=".pdf,.txt,.md">
+          <label for="file-upload">Upload Documents (PDF or JSON)</label>
+          <input type="file" id="file-upload" multiple accept=".pdf,.json">
           <div id="upload-status" class="upload-status"></div>
         </div>
       </div>
@@ -451,6 +468,7 @@
             <option value="unresolved">Unresolved</option>
             <option value="resolved">Resolved</option>
           </select>
+          <button id="export-chats" class="export-button">Export Conversations</button>
         </div>
         <div id="chat-list" class="chat-list"></div>
       </div>
@@ -799,13 +817,13 @@
       // Update installation code
       function updateInstallationCode() {
         const code = `&lt;script src="dist/jive-chatbot.umd.min.js"&gt;&lt;/script&gt;
-&lt;jive-chatbot 
-  api-endpoint="https://your-api-endpoint.com" 
-  company-name="${companyNameInput.value}" 
-  position="${positionSelect.value}"
-  theme="${primaryColorInput.value}:${secondaryColorInput.value}"
-  welcome-message="${welcomeMessageInput.value}"&gt;
-&lt;/jive-chatbot&gt;`;
+        &lt;jive-chatbot 
+          api-endpoint="https://your-api-endpoint.com" 
+          company-name="${companyNameInput.value}" 
+          position="${positionSelect.value}"
+          theme="${primaryColorInput.value}:${secondaryColorInput.value}"
+          welcome-message="${welcomeMessageInput.value}"&gt;
+        &lt;/jive-chatbot&gt;`;
 
         installationCode.innerHTML = code;
       }
@@ -923,10 +941,10 @@
           statusDiv.appendChild(fileItem);
 
           const formData = new FormData();
-          formData.append('pdf', file);
+          formData.append('file', file);
 
           try {
-            const response = await fetch('http://localhost:3000/api/pdf/upload', {
+            const response = await fetch('http://localhost:3000/api/documents/upload', {
               method: 'POST',
               body: formData
             });
@@ -936,11 +954,13 @@
             if (response.ok) {
               fileItem.querySelector('.file-status').textContent = 'Uploaded successfully';
               fileItem.querySelector('.file-status').classList.add('status-success');
+              // Refresh the file list after successful upload
+              loadFileList();
             } else if (response.status === 409) {
               fileItem.querySelector('.file-status').textContent = 'Duplicate file - skipped';
               fileItem.querySelector('.file-status').classList.add('status-duplicate');
             } else {
-              throw new Error(result.error || 'Upload failed');
+              throw new Error(result.error || result.details || 'Upload failed');
             }
           } catch (error) {
             fileItem.querySelector('.file-status').textContent = `Error: ${error.message}`;
@@ -979,9 +999,262 @@
       // Add event listeners for filters
       document.getElementById('category-filter').addEventListener('change', loadChats);
       document.getElementById('status-filter').addEventListener('change', loadChats);
+      document.getElementById('export-chats').addEventListener('click', exportChats);
 
       // Load chats when page loads
       loadChats();
+
+      // Export chats function
+      async function exportChats() {
+        try {
+          const response = await fetch(`${apiEndpoint}/api/chats`);
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          const chats = await response.json();
+
+          // Configure marked options
+          marked.setOptions({
+            breaks: true, // Convert line breaks to <br>
+            gfm: true,   // Enable GitHub Flavored Markdown
+            headerIds: false, // Disable header IDs for cleaner HTML
+            mangle: false,    // Disable mangling of email addresses
+            sanitize: true,   // Sanitize HTML to prevent XSS
+            smartLists: true, // Use smart list behavior
+            smartypants: true // Use smart typography
+          });
+
+          // Create HTML content
+          const htmlContent = `
+            <!DOCTYPE html>
+            <html>
+            <head>
+              <meta charset="UTF-8">
+              <title>Jive Chatbot Conversations Export</title>
+              <style>
+                body {
+                  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                  max-width: 800px;
+                  margin: 0 auto;
+                  padding: 20px;
+                  color: #333;
+                  line-height: 1.6;
+                }
+                .header {
+                  text-align: center;
+                  margin-bottom: 30px;
+                  padding-bottom: 20px;
+                  border-bottom: 2px solid #4a90e2;
+                }
+                .header h1 {
+                  color: #4a90e2;
+                  margin: 0;
+                }
+                .header p {
+                  color: #666;
+                  margin: 10px 0 0;
+                }
+                .chat-item {
+                  margin-bottom: 30px;
+                  padding: 20px;
+                  border: 1px solid #e0e0e0;
+                  border-radius: 8px;
+                  background-color: #f9f9f9;
+                }
+                .chat-header {
+                  display: flex;
+                  justify-content: space-between;
+                  margin-bottom: 15px;
+                  padding-bottom: 10px;
+                  border-bottom: 1px solid #e0e0e0;
+                }
+                .chat-category {
+                  background-color: #e3f2fd;
+                  padding: 4px 8px;
+                  border-radius: 4px;
+                  font-size: 0.9em;
+                  color: #1976d2;
+                }
+                .chat-timestamp {
+                  color: #666;
+                  font-size: 0.9em;
+                }
+                .chat-content {
+                  margin: 15px 0;
+                }
+                .chat-question {
+                  font-weight: 500;
+                  margin-bottom: 10px;
+                  color: #333;
+                }
+                .chat-answer {
+                  color: #666;
+                  margin-left: 20px;
+                }
+                .review-section {
+                  margin-top: 20px;
+                  padding-top: 20px;
+                  border-top: 1px solid #e0e0e0;
+                }
+                .review-section h4 {
+                  color: #4a90e2;
+                  margin-top: 0;
+                }
+                .comment-item {
+                  background-color: #f5f5f5;
+                  padding: 10px;
+                  border-radius: 4px;
+                  margin-bottom: 10px;
+                }
+                .comment-header {
+                  display: flex;
+                  justify-content: space-between;
+                  margin-bottom: 5px;
+                  font-size: 0.9em;
+                  color: #666;
+                }
+                .status-badge {
+                  display: inline-block;
+                  padding: 4px 8px;
+                  border-radius: 4px;
+                  font-size: 0.9em;
+                  font-weight: 500;
+                }
+                .status-resolved {
+                  background-color: #e6f4ea;
+                  color: #137333;
+                }
+                .status-unresolved {
+                  background-color: #fce8e6;
+                  color: #c5221f;
+                }
+                /* Markdown-specific styles */
+                .markdown-content {
+                  line-height: 1.6;
+                }
+                .markdown-content h1,
+                .markdown-content h2,
+                .markdown-content h3,
+                .markdown-content h4,
+                .markdown-content h5,
+                .markdown-content h6 {
+                  margin-top: 1.5em;
+                  margin-bottom: 1em;
+                  color: #333;
+                }
+                .markdown-content p {
+                  margin-bottom: 1em;
+                }
+                .markdown-content ul,
+                .markdown-content ol {
+                  margin-bottom: 1em;
+                  padding-left: 1.5em;
+                }
+                .markdown-content li {
+                  margin-bottom: 0.5em;
+                }
+                .markdown-content code {
+                  background-color: #f5f5f5;
+                  padding: 0.2em 0.4em;
+                  border-radius: 3px;
+                  font-family: monospace;
+                }
+                .markdown-content pre {
+                  background-color: #f5f5f5;
+                  padding: 1em;
+                  border-radius: 4px;
+                  overflow-x: auto;
+                  margin-bottom: 1em;
+                }
+                .markdown-content pre code {
+                  background-color: transparent;
+                  padding: 0;
+                }
+                .markdown-content blockquote {
+                  border-left: 4px solid #4a90e2;
+                  margin: 1em 0;
+                  padding-left: 1em;
+                  color: #666;
+                }
+                .markdown-content a {
+                  color: #4a90e2;
+                  text-decoration: none;
+                }
+                .markdown-content a:hover {
+                  text-decoration: underline;
+                }
+                .markdown-content table {
+                  border-collapse: collapse;
+                  width: 100%;
+                  margin-bottom: 1em;
+                }
+                .markdown-content th,
+                .markdown-content td {
+                  border: 1px solid #ddd;
+                  padding: 8px;
+                  text-align: left;
+                }
+                .markdown-content th {
+                  background-color: #f5f5f5;
+                }
+              </style>
+            </head>
+            <body>
+              <div class="header">
+                <h1>Jive Chatbot Conversations</h1>
+                <p>Exported on ${new Date().toLocaleString()}</p>
+              </div>
+              ${chats.map(chat => `
+                <div class="chat-item">
+                  <div class="chat-header">
+                    <span class="chat-category">${chat.category || 'Uncategorized'}</span>
+                    <span class="status-badge ${chat.resolved ? 'status-resolved' : 'status-unresolved'}">
+                      ${chat.resolved ? 'Resolved' : 'Unresolved'}
+                    </span>
+                    <span class="chat-timestamp">${new Date(chat.timestamp).toLocaleString()}</span>
+                  </div>
+                  <div class="chat-content">
+                    <div class="chat-question markdown-content">${marked.parse(chat.question)}</div>
+                    <div class="chat-answer markdown-content">${marked.parse(chat.answer)}</div>
+                  </div>
+                  ${chat.review ? `
+                    <div class="review-section">
+                      <h4>Review</h4>
+                      <div class="comments-list">
+                        ${chat.review.comments.map(comment => `
+                          <div class="comment-item">
+                            <div class="comment-header">
+                              <span>${comment.reviewerId}</span>
+                              <span>${new Date(comment.timestamp).toLocaleString()}</span>
+                            </div>
+                            <div class="comment-text markdown-content">${marked.parse(comment.text)}</div>
+                          </div>
+                        `).join('')}
+                      </div>
+                    </div>
+                  ` : ''}
+                </div>
+              `).join('')}
+            </body>
+            </html>
+          `;
+
+          // Create and download the file
+          const blob = new Blob([htmlContent], { type: 'text/html' });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = `jive-chatbot-conversations-${new Date().toISOString().split('T')[0]}.html`;
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+          URL.revokeObjectURL(url);
+
+        } catch (error) {
+          console.error('Error exporting chats:', error);
+          alert('Error exporting conversations. Please try again.');
+        }
+      }
     });
   </script>
 </body>
